@@ -6,14 +6,11 @@ import com.ldts.mythsmists.model.Elements.Orpheus;
 import com.ldts.mythsmists.model.Elements.Wall;
 import com.ldts.mythsmists.model.Position;
 import com.ldts.mythsmists.model.game.map.Map;
-import com.ldts.mythsmists.gui.GUI;
-import com.ldts.mythsmists.viewer.game.OrpheusViewer;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mockito;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import java.util.Arrays;
+import java.util.List;
 
 public class OrpheusControllerTest {
 
@@ -27,12 +24,12 @@ public class OrpheusControllerTest {
         orpheus = new Orpheus(10, 10);
         map = new Map(30, 20);
         map.setOrpheus(orpheus);
-        map.setWalls(Arrays.asList());
-        map.setEnemys(Arrays.asList());
-        map.setDracmas(Arrays.asList());
+        map.setWalls(List.of());
+        map.setEnemys(List.of());
+        map.setDracmas(List.of());
         map.setCheckpoint(new Checkpoint(0,0));
-        map.setLookSpace(Arrays.asList());
-        map.setRivers(Arrays.asList());
+        map.setLookSpace(List.of());
+        map.setRivers(List.of());
         controller = new OrpheusController(map);
     }
 
@@ -45,7 +42,7 @@ public class OrpheusControllerTest {
 
     @Test
     void moveRightNotEmpty() {
-        map.setWalls(Arrays.asList(new Wall(11, 10)));
+        map.setWalls(List.of(new Wall(11, 10)));
         controller.moveOrpheusRight();
         assertEquals(new Position(10, 10), orpheus.getPosition());
     }
